--- a/scss/components/header/_header.scss
+++ b/scss/components/header/_header.scss
@@ -8,11 +8,11 @@
 	@include flex-center-vert;
 	transition: top $time;
 
-	&.sticky-header {
-		position: fixed;
-		top: 0;
-		left: 0;
-		z-index: 999;
+	&.sticky-top {
+		// position: fixed;
+		// top: 0;
+		// left: 0;
+		z-index: 500;
 	}
 
 	&-nav {
