--- a/scss/components/main/_main.scss
+++ b/scss/components/main/_main.scss
@@ -84,9 +84,14 @@
                 @include radius(4);
                 padding: length(8) length(16);
                 @include font-face($primaryFont, style('normal'), size(12), weight('normal'), line-height(16, 12));
+                @include transitionsall;
 
                 &::after {
                   color: $textlight;
+                }
+
+                &:focus {
+                  border-color: $secondarytext;
                 }
               }
 
@@ -98,9 +103,14 @@
                 padding: length(8) length(16);
                 background: $white url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 10L12 14L8 10' stroke='%238A92A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A") no-repeat center right 3%;
                 appearance: none;
+                @include transitionsall;
 
                 option {
                   color: $textprimary;
+                }
+
+                &:focus {
+                  border-color: $secondarytext;
                 }
               }
 
@@ -141,20 +151,6 @@
 
               @include breakpoint(mobile576) {
                 width: length(153);
-              }
-              
-              .btn-filter {
-                @include w100;
-                @include font-face($primaryFont, style('normal'), size(12), weight('semibold'), line-height(16, 12));
-                padding: length(9) length(32);
-                @include setBgColor($primary, $white);
-                @include radius(4);
-                text-align: center;
-                @include transitionsbackground;
-
-                @include hover {
-                  background: darken($primary, 15%);
-                }
               }
             }
           }
