--- a/scss/components/modal/_modal.scss
+++ b/scss/components/modal/_modal.scss
@@ -16,25 +16,24 @@
 		//     padding: length(16);
 		// }
 
-		// .btn-close {
-		//     @include transparent-button;
-		//     @include square(length(24));
-		//     @include flex-center;
-		//     opacity: 1;
-		//     overflow: hidden;
-		//     margin-left: auto;
-		//     padding: length(0);
-		//     @include transitiontransform;
+		.modal-title {
+			color: $headingtext;
+			@include font-face($primaryFont, style('normal'), size(20), weight('semibold'), line-height(35, 20));
+		}
 
-		//     &:focus {
-		//         outline: none;
-		//         box-shadow: none;
-		//     }
+		.btn-close {
+			@include transparent-button;
+			@include square(length(27));
+			@include flex-center;
+			opacity: 1;
+			overflow: hidden;
+			@include transitiontransform;
 
-		//     @include hover {
-		//         @include transform(rotate(90deg));
-		//     }
-		// }
+			&:focus {
+				outline: none;
+				box-shadow: none;
+			}
+		}
 	}
 
 	&-body {}
